# elevator

./: .gitattributes  Jenkinsfile  README.md
ccdl/: .project
ccdl/SRM/: pi_srm.c
ccdl/config/: functions.txt  units.txt
ccdl/procedures/: .gitignore  check_motor_speed_measurement.ccd  elevator_check_button_lights.ccd  encoder_check.ccd  sensor_fault.ccd
com.razorcat.elevator.test/: .project
com.razorcat.elevator.test/test/: encoder_a.txt  encoder_b.txt  encoder_speed.txt
controller/: README.md  executeTestAndReport.sh  expected_result
controller/elevat/: elevat.ino
controller/source/: levels_and_buttons.c
controller/tessy/: .gitignore  execution.tbs  tessy.pdbx  test_details_reports.tbs
elevat/: elevat.ino
elevat.play/: elevat.play.ino
elevator/: README.md
logbook/: Import Relevance Matrix.txt  Import TestBench.txt
requirements/: Elevator Matrix.xml  Elevator.xml  Übersicht.pptx
source/: cabin.c  utils.c
tessy/: tessy.pdbx
tessy/backup/: Tests.Cabin.tmb  Tests.LevelsAndButtons.tmb
tessy/config/: configuration.xml
testsystem/: README.md
testsystem/ccdl/: batch.xml
testsystem/ccdl/procedures/userfunctions/: CMakeLists.txt
testsystem/ccdl/procedures/userfunctions/samplecode/: Makefile  README.md
testsystem/ccdl/procedures/userfunctions/samplecode/ccdconfig4tests/: constants.txt  modules.txt  parameter.txt
testsystem/ccdl/procedures/userfunctions/samplecode/src/: userfunctions.c
testsystem/ccdl/procedures/userfunctions/samplecode/tests/00build-succeeds/: README  testing.ccdextension.ccd
testsystem/gamma/: config.xml  (+2 more)
(+63 files in other folders)
